--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -25,6 +24,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# env
+.env
 # local env files
 .env*.local
 
@@ -34,3 +35,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.idea
