--- a/app/package.json
+++ b/app/package.json
@@ -9,18 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "@dynamic-labs/ethereum": "4.0.0-alpha.1",
+    "@dynamic-labs/sdk-react-core": "4.0.0-alpha.1",
+    "@dynamic-labs/solana": "4.0.0-alpha.1",
+    "@types/node": "20.5.4",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "dotenv": "^16.4.5",
+    "encoding": "^0.1.13",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
+    "next": "13.4.19",
+    "pino-pretty": "^11.2.2",
+    "postcss": "8.4.28",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
+    "telegraf": "^4.16.3",
+    "typescript": "5.1.6",
+    "viem": "^2.7.6"
+  },
+  "resolutions": {
+    "viem": "^2.7.6",
+    "@solana/web3.js": "1.91.6",
+    "rpc-websockets": "7.10.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "@types/jsonwebtoken": "^9.0.6",
+    "tailwindcss": "^3.4.3"
   }
 }
