--- a/app/package.json
+++ b/app/package.json
@@ -22,9 +22,11 @@
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
+    "phaser": "^3.85.2",
+    "phaser3spectorjs": "^0.0.8",
     "pino-pretty": "^11.2.2",
     "postcss": "8.4.28",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "telegraf": "^4.16.3",
