--- a/app/package.json
+++ b/app/package.json
@@ -21,11 +21,15 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
+    "maci-core": "^2.2.0",
+    "maci-crypto": "^2.2.0",
+    "maci-domainobjs": "^2.2.0",
     "next": "13.4.19",
     "pino-pretty": "^11.2.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.15",
     "tailwindcss": "3.3.3",
     "telegraf": "^4.16.3",
     "typescript": "5.1.6",
