--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "ethers": "^6.13.2",
     "jsonwebtoken": "^9.0.2",
     "maci-core": "^2.2.0",
     "maci-crypto": "^2.2.0",
