--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@dynamic-labs/ethereum": "4.0.0-alpha.1",
     "@dynamic-labs/sdk-react-core": "4.0.0-alpha.1",
     "@dynamic-labs/solana": "4.0.0-alpha.1",
+    "@fontsource/londrina-solid": "^5.1.0",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
