--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@worldcoin/idkit": "^1.3.0",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
